--- a/_config.yml
+++ b/_config.yml
@@ -18,3 +18,12 @@ compress_html:
   clippings: all
   ignore:
     envs: development  # disable compression in dev environment
+    
+defaults:
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
