--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,15 @@ compress_html:
 
 include: ["_pages"]
 
+footer:
+  links:
+    - label: "Twitter"
+      icon: "fab fa-fw fa-twitter-square"
+      url: "https://twitter.com/Email_Hippo"
+    - label: "LinkedIn"
+      icon: "fab fa-linkedin"
+      url: "https://www.linkedin.com/company/email-hippo-ltd/"
+
 defaults:
   # _pages
   - scope:
