--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,4 +1,4 @@
-@Email_Hippo
+@Email_Hippo:
    name: "Email Hippo"
    bio: "I am Email Hippo Ltd"
    avatar: "/assets/images/authors/jo1_thumb.png"
