--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ social:
 
 author:
   name: "Email Hippo"
-  avatar: "//s3.amazonaws.com/emailhippo/bizbranding/co.logos/ex-180x180.png"
+  avatar: "//d1wiejlotg3vr4.cloudfront.net/bizbranding/co.logos/ex-180x180.png"
   bio: "Email Hippo provides email address verification and data cleansing solutions."
   location: "Cornwall, United Kingdom"
   links:
