--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -14,7 +14,7 @@ Jo:
        url: "https://twitter.com/Email_Hippo"
 
 Stuart:
-   name: "Jo Kennedy"
+   name: "Stuart Kennedy"
    bio: "I work at Email Hippo Ltd"
    avatar: "/assets/images/authors/stuart-1.jpg"
    links:
